--- a/index.html
+++ b/index.html
@@ -1,19 +1,95 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML><html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>REFORM MOVEMENTS</title>
+    <title>BeEF</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="description" content="the browser exploitation framework project" />
+    <meta property="og:site_name" content="BeEF" /><meta property="og:title" content="BeEF" /><meta property="og:type" content="website" />
+    <meta property="og:description" content="the browser exploitation framework project" />
+    <link href="https://fonts.googleapis.com/css?display=swap&family=Archivo:600,600italic,100,100italic" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="style.css">
+    <noscript>
+      <style>body {overflow: auto !important;}body:after {display: none !important;}#main > .inner {opacity: 1.0 !important;}</style>
+    </noscript>
   </head>
-  <body>
-  <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFPrz7BMdI&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
-</div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFPrz7BMdI&#x2F;view?utm_content=DAFPrz7BMdI&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Impact of reform moments</a> by Manoraj
+  <body class="is-loading">
+    <div id="wrapper">
+      <div id="main">
+        <div class="inner">
+          <div id="container01" class="style1 container default full screen">
+            <div class="wrapper"><div class="inner" data-onvisible-trigger="1">
+              <h1 id="text04" class="style2">BeEF - The Browser Exploitation Framework Project</h1>
+              <p id="text16" class="style3">Now that you have visited this webpage, you are recommended to read through the end...</p>
+              </div>
+            </div>
+          </div>
+          <div id="container03" class="style2 container default">
+            <div class="wrapper"><div class="inner" data-onvisible-trigger="1">
+              <h2 id="text07" class="style2">What is a browser exploitation framework</h2>
+              <p id="text05" class="style1">BeEF is short for The Browser Exploitation Framework. It is a penetration testing tool that focuses on the web browser.</p>
+              <div id="image04" class="style1 image" data-position="center">
+                <span class="frame">
+                  <img src="assets/images/image04.jpg?v=05a42948" alt="BeEF&#039;s console in action" />
+                </span>
+              </div>
+              <p id="text13" class="style1">Amid growing concerns about web-borne attacks against clients, including mobile clients, BeEF allows the professional penetration tester to assess the actual security posture of a target environment by using client-side attack vectors.</p>
+              </div>
+            </div>
+          </div>
+          <hr id="divider04" class="style1 full screen">
+          <div id="container04" class="style2 container default">
+            <div class="wrapper"><div class="inner" data-onvisible-trigger="1">
+              <h2 id="text08" class="style2">How does Browser Exploitation Framework work?</h2>
+              <p id="text09" class="style1">BeEF, the Browser Exploitation Framework, is a testing tool designed to enable penetration testers to launch client-side attacks against target browsers. By using techniques similar to common drive-by malware, testers can assess the security of a target&#039;s internal environment, bypassing the hardened perimeter.</p><div id="image03" class="style1 image" data-position="center">
+              <span class="frame deferred">
+                <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAxMjYwIDg4OCIgd2lkdGg9IjEyNjAiIGhlaWdodD0iODg4IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSIjZGRlM2VjIiB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIi8%2BPC9zdmc%2B" data-src="assets/images/image03.jpg?v=05a42948" alt="" />
+              </span>
+              </div>
+              </div>
+            </div>
+          </div>
+          <hr id="divider05" class="style1 full screen">
+          <div id="container05" class="style2 container default">
+            <div class="wrapper">
+              <div class="inner" data-onvisible-trigger="1">
+                <h2 id="text01" class="style2">conclusion</h2>
+                <p id="text11" class="style1">
+                  <span class="p">Just chill!!<br /> As this was all for educational purposes.<br /> Yes, this webpage is using Browser Exploitation Framework right now, Don&#039;t worry your data is safe (◕‿◕)</span>
+                </p>
+                <div id="gallery01" class="style1 gallery">
+                  <div class="inner">
+                    <ul>
+                      <li>
+                        <a href="assets/images/gallery01/baca6fc8_original.jpg?v=05a42948" class="thumbnail">
+                          <span class="frame">
+                            <img src="assets/images/gallery01/baca6fc8.jpg?v=05a42948" alt="Untitled" />
+                          </span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="assets/images/gallery01/57d72999_original.jpg?v=05a42948" class="thumbnail"><span class="frame">
+                          <img src="assets/images/gallery01/57d72999.jpg?v=05a42948" alt="Untitled" />
+                          </span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="container02" class="style3 container default full screen">
+            <div class="wrapper">
+              <div class="inner">
+                <h2 id="text03" class="style2">contact</h2>
+                <p id="text06" class="style1">( う-´)づ︻╦̵̵̿╤── Dusri id bhi follow krlo Guyzz <a href="https://www.instagram.com/water_hashira.env/">Tomioka</a></p>
+                <p id="text10" class="style4">© My BASEMENT. console. log(&quot;Hello World&quot;)</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
