--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE HTML><html lang="en">
+<!DOCTYPE HTML>
+<html lang="en">
   <head>
     <title>BeEF</title>
     <meta charset="utf-8" />
@@ -29,7 +30,7 @@
               <p id="text05" class="style1">BeEF is short for The Browser Exploitation Framework. It is a penetration testing tool that focuses on the web browser.</p>
               <div id="image04" class="style1 image" data-position="center">
                 <span class="frame">
-                  <img src="assets/images/image04.jpg?v=05a42948" alt="BeEF&#039;s console in action" />
+                  <img src="https://media.discordapp.net/attachments/895711530333655044/1053955506164744193/feature-2.jpg" alt="BeEF&#039;s console in action" />
                 </span>
               </div>
               <p id="text13" class="style1">Amid growing concerns about web-borne attacks against clients, including mobile clients, BeEF allows the professional penetration tester to assess the actual security posture of a target environment by using client-side attack vectors.</p>
@@ -42,7 +43,7 @@
               <h2 id="text08" class="style2">How does Browser Exploitation Framework work?</h2>
               <p id="text09" class="style1">BeEF, the Browser Exploitation Framework, is a testing tool designed to enable penetration testers to launch client-side attacks against target browsers. By using techniques similar to common drive-by malware, testers can assess the security of a target&#039;s internal environment, bypassing the hardened perimeter.</p><div id="image03" class="style1 image" data-position="center">
               <span class="frame deferred">
-                <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAxMjYwIDg4OCIgd2lkdGg9IjEyNjAiIGhlaWdodD0iODg4IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSIjZGRlM2VjIiB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIi8%2BPC9zdmc%2B" data-src="assets/images/image03.jpg?v=05a42948" alt="" />
+                <img src="https://media.discordapp.net/attachments/895711530333655044/1053955505904693278/beef3.jpg" data-src="assets/images/image03.jpg?v=05a42948" alt="" />
               </span>
               </div>
               </div>
@@ -60,15 +61,15 @@
                   <div class="inner">
                     <ul>
                       <li>
-                        <a href="assets/images/gallery01/baca6fc8_original.jpg?v=05a42948" class="thumbnail">
+                        <a href="https://media.discordapp.net/attachments/895711530333655044/1053955506403803176/258788897_185689890784101_9012639906560750533_n.jpg" class="thumbnail">
                           <span class="frame">
-                            <img src="assets/images/gallery01/baca6fc8.jpg?v=05a42948" alt="Untitled" />
+                            <img src="https://media.discordapp.net/attachments/895711530333655044/1053955506403803176/258788897_185689890784101_9012639906560750533_n.jpg" alt="Untitled" />
                           </span>
                         </a>
                       </li>
                       <li>
-                        <a href="assets/images/gallery01/57d72999_original.jpg?v=05a42948" class="thumbnail"><span class="frame">
-                          <img src="assets/images/gallery01/57d72999.jpg?v=05a42948" alt="Untitled" />
+                        <a href="https://media.discordapp.net/attachments/895711530333655044/1053955506621923398/HELLO_WORLD.png" class="thumbnail"><span class="frame">
+                          <img src="https://media.discordapp.net/attachments/895711530333655044/1053955506621923398/HELLO_WORLD.png" alt="Untitled" />
                           </span>
                         </a>
                       </li>
